ags (3.15.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNoiseUtil
	* implemented noise in ags-fx-synth
	* TODO:JK: implemented AgsHybridFMSynth

ags (3.14.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented UI for AgsVst3Bridge
	* fixed missing update of prefixed macros in build files
	* improved block scope of AgsLv2Bridge

ags (3.14.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* providing symbolic icons
	* improved prefixing macros AGS_DOC_DIR, AGS_DATA_DIR and AGS_SRC_DIR
	* improved make use of AGS_UI_PROVIDER_DEFAULT_PADDING and AGS_UI_PROVIDER_DEFAULT_MARGIN_END

ags (3.14.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing shift piano
	* minor improvements

ags (3.14.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed VST3 block controls either bridge or UI
	* fixed Lv2 block controls either bridge or UI
	* improved open files with GSequencer

ags (3.14.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAudiorec:wave_loader_spinner field of GtkSpinner type to visualize wave loader progress
	* fixed export window to stop AgsAudiorec after export completed

ags (3.14.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_notation_free_all_selection()
	* implemented ags_automation_free_all_selection()
	* implemented ags_wave_free_all_selection()
	* fixed corrupted selection list of AgsNotation, AgsAutomation and AgsWave

ags (3.14.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wave form editor selection

ags (3.14.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wave form editor paste from clipboard
	* fixed AgsHybridSynth XML write of sync attack and phase

ags (3.14.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wave form editor cursor
	* fixed wave form editor selection

ags (3.14.6)
