@@ -1,9 +1,10 @@
 ags (3.15.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* implemented AgsNoiseUtil
-	* implemented noise in ags-fx-synth
 	* TODO:JK: implemented AgsHybridFMSynth
+	* implemented ags-fx-fm-synth
+	* implemented noise in ags-fx-synth
+	* implemented AgsNoiseUtil
 
 ags (3.14.15)
 
